Fixed composer.json, see http://de.contaowiki.org/Composer/Replace#TLDR

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
 		"classmap":["src/"]
 	},
 	"replace":{
-		"contao-legacy/rocksolid-theme-assistant":"*"
+		"contao-legacy/rocksolid-theme-assistant":"self.version"
 	},
 	"extra":{
 		"contao":{
