--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,12 @@
 		"php":">=5.3"
 	},
 	"autoload":{
-		"classmap":["src/"]
+		"psr-4": {
+			"MadeYourDay\\Contao\\": "src/"
+		},
+		"psr-0": {
+			"DC_RockSolidThemeAssistant": ""
+		}
 	},
 	"replace":{
 		"contao-legacy/rocksolid-theme-assistant":"self.version"
