--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,12 @@
 		"php":">=5.5",
 		"contao/core-bundle":"^4.3"
 	},
+	"require-dev": {
+		"contao/manager-plugin": "^2.0"
+	},
 	"conflict": {
-		"contao/core": "*"
+		"contao/core": "*",
+		"contao/manager-plugin": "<2.0 || >=3.0"
 	},
 	"autoload":{
 		"psr-4": {
@@ -38,6 +42,7 @@
 	"extra":{
 		"branch-alias": {
 			"dev-develop": "2.0.x-dev"
-		}
+		},
+		"contao-manager-plugin": "MadeYourDay\\RockSolidThemeAssistant\\ContaoManagerPlugin"
 	}
 }
